--- a/trunk/modules/default/views/scripts/error/error.phtml
+++ b/trunk/modules/default/views/scripts/error/error.phtml
@@ -3,8 +3,8 @@
 <?php if (!empty($this->trace)): ?>
 <dl class="errors">
     <?php foreach ((array)$this->trace as $trace): ?>
-    <dt><?php print $trace['class'] ?>::<?php print $trace['function'] ?></dt>
-    <dd><em><?php print $trace['line'] ?></em> [..]/<?php print basename($trace['file']) ?></dd>
+    <dt><?php print @$trace['class'] ?>::<?php print @$trace['function'] ?></dt>
+    <dd><em><?php print @$trace['line'] ?></em> [..]/<?php print basename(@$trace['file']) ?></dd>
     <?php endforeach; ?>
 </dl>
 <?php endif; ?>
